2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointList.ui:
	* BrowserWindow.cpp:
	* ViewpointList.h:
	* ViewpointList.cpp:
	* X3DViewpointListInterface.h:
	* X3DViewpointListInterface.cpp: 

2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineCellRenderer.cpp: 

2014-03-14  Holger Seelig  <holger.seelig@yahoo.de>

	* home.wrl:
	* X3DBrowserEditor.cpp:
	* OutlineTreeModel.cpp:
	* OutlineRouteGraph.cpp:
	* OutlineCellRenderer.cpp: 

2014-03-13  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui:
	* X3DBrowserWidget.cpp:
	* url_error.wrl: 

2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* info.wrl:
	* home.wrl:
	* red.orange.yellow.wrl: 

2014-03-11  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* home.wrl:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* red.orange.yellow.wrl: 

2014-03-10  Holger Seelig  <holger.seelig@yahoo.de>

	* home.wrl:
	* info.wrl:
	* date.wrl:
	* gears.wrl:
	* url_error.wrl:
	* Rotor.wrl:
	* red.orange.yellow.wrl:
	* Rotor.x3dv:
	* Externproto.x3dv: 

2014-03-10  Holger Seelig  <holger.seelig@yahoo.de>

	* date.wrl: 

2014-03-10  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.cpp:
	* X3DOutlineTreeView.cpp: 

2014-03-10  Holger Seelig  <holger.seelig@yahoo.de>

	* date.wrl:
	* gears.wrl:
	* Rain.x3dv:
	* Fire.x3dv:
	* fire2.png:
	* Snow.x3dv:
	* Box.x3dv:
	* Smoke.x3dv:
	* Fire2.x3dv:
	* Text.x3dv:
	* Cone.x3dv:
	* Bubbles.x3dv:
	* Arc2D.x3dv:
	* Disk2D.x3dv:
	* Fountain.x3dv:
	* Water1.wrl:
	* snowflake.png:
	* Sphere.x3dv:
	* PointSet.x3dv:
	* Circle2D.x3dv:
	* Cylinder.x3dv:
	* Extrusion.x3dv:
	* Polyline2D.x3dv:
	* ArcClose2D.x3dv:
	* Rectangle2D.x3dv:
	* Polypoint2D.x3dv:
	* Rain.x3dv:
	* Snow.x3dv:
	* fire2.png:
	* ElevationGrid.x3dv:
	* IndexedLineSet.x3dv:
	* TriangleSet2D.x3dv:
	* Fire.x3dv:
	* Smoke.x3dv:
	* Fire2.x3dv:
	* IndexedFaceSet.x3dv:
	* snowflake.png: 

2014-03-08  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp: