@@ -193,13 +193,6 @@ ViewpointList::on_row_activated (const Gtk::TreeModel::Path & path, Gtk::TreeVie
 
 	else
 		viewpoint -> set_bind () = true;
-
-}
-
-bool
-ViewpointList::on_key_press_event (GdkEventKey* event)
-{
-	return true;
 }
 
 ViewpointList::~ViewpointList ()
