@@ -34,7 +34,6 @@
                 <property name="rules_hint">True</property>
                 <property name="search_column">1</property>
                 <signal name="row-activated" handler="on_row_activated" swapped="no"/>
-                <signal name="key_press_event" handler="on_key_press_event" swapped="no"/>
                 <child internal-child="selection">
                   <object class="GtkTreeSelection" id="treeview-selection">
                     <property name="mode">none</property>
