@@ -2,6 +2,12 @@
 
 	* X3DBrowser.h:
 	* X3DBrowser.cpp:
+	* X3DExecutionContext.cpp: 
+
+2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* X3DBrowser.h:
+	* X3DBrowser.cpp:
 	* BindableNodeList.h:
 	* X3DExecutionContext.cpp:
 	* jsBrowser.h:
